# lilrcc

./: CMakeLists.txt  README.md  STRUCTURE.txt  error.cpp  error.h  gol  gol2  lilrcc.cpp  lilrcc.h  lilrccreader.cpp  lilrccreader.h  main.cpp  rcc.cpp  rcc.h  resourcereader.cpp  resourcereader.h  resourcewriter.cpp  resourcewriter.h  sources.qrc  sources2.rcc  tree.cpp  tree.h
tests/: testsAndSources.qrc  testsAndSources.rcc  testsAndSourcesReversed.qrc  testsAndSourcesReversed.rcc
